--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -283,6 +283,7 @@
   width: 100vw;
   display: grid;
   grid-template-columns: repeat(4, 300px);
+  gap: 2.4rem;
   overflow-x: auto;
   cursor: grab;
   user-select: none;
@@ -387,10 +388,10 @@
   font-weight: 700;
 }
 
-.footerContent img {
-  width: 100px;
+.footerContent > img{
+  width: 15rem;
   height: auto;
-  margin-bottom: 0.4rem;
+  margin: 0 0 1.4rem 0;
 }
 
 .footerLinks {
@@ -636,10 +637,23 @@
 
 @media (max-width: 720px)
 {
+  
+
+.container header {
+  width: 100%;
+  height: 3.6rem;
+  margin-bottom: 3.2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* box-shadow: 0 5px 8px 0 rgba(0,0,0,0.3); */
+}
+
   .carrossel {
     width: 100vw;
     display: grid;
     grid-template-columns: repeat(4, 25rem);
+    gap: 8rem;
     overflow-x: auto;
     cursor: grab;
     user-select: none;
@@ -722,6 +736,17 @@
     padding: 0 4.8rem 2.4rem 4.8rem;
     margin: -3rem 0 0 0;
   }
+
+  .container footer {
+    background-color: #232323;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0 4.8rem 2.8rem 4.8rem;
+  }
+
   .footerContent{
     width: 100%;
     margin-bottom: 4.5rem;
