--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -108,7 +108,7 @@
   text-align: center;
   background-color: #566dea;
   color: #fff !important;
-  padding: 15px 0;
+  padding: 1.4rem 0.8rem;
   text-decoration: none !important;
   border-radius: 10px;
   text-decoration: none;
@@ -168,7 +168,7 @@
   text-align: center;
   background-color: #566dea;
   color: #fff !important;
-  padding: 15px 0;
+  padding: 1.4rem 0.8rem;
   text-decoration: none !important;
   border-radius: 10px;
   text-decoration: none;
@@ -634,10 +634,135 @@
   filter: brightness(1.2);
 }
 
+.ctaBeta {
+  width: 100vw;
+  height: auto;
+  display: flex;
+}
+
+.contentBeta{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../../assets/background-brand.png);
+  background-repeat: no-repeat;
+  background-position: -25rem 30rem;
+  padding-bottom: 2.4rem;
+}
+
+.contentBeta h2{
+  text-align: center;
+  font-size: 8rem;
+  font-weight: bold;
+  color: #566dea;
+  margin: 1.4rem 0;
+}
+
+.contentBeta p{
+  font-size: 1.8rem;
+  font-weight: normal;
+  color: #000000;
+  text-align: center;
+  margin: 0.8rem 0;
+}
+.formGroup{
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+  align-items: center;
+  justify-content: center;
+}
+.formGroup input{
+  border: 1px solid #6ca6fd !important;
+}
+
+.formGroup button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #566dea;
+  color: #fff !important;
+  padding: 1.4rem 0.8rem;
+  text-decoration: none !important;
+  border-radius: 10px;
+  text-decoration: none;
+  box-shadow: 3px 3px 4px #b5b5b5;
+  transition: all 0.3s ease;
+}
+
+.formGroup button:hover {
+  background-color: #263481;
+}
 
 @media (max-width: 720px)
 {
   
+.ctaBeta {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+
+.contentBeta{
+  width: 100%;
+  height: 100%;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../../assets/background-brand.png);
+  background-repeat: no-repeat;
+  background-position: -40rem 30rem;
+  padding-bottom: 2.4rem;
+}
+
+.contentBeta h2{
+  text-align: center;
+  font-size: 4rem;
+  font-weight: bold;
+  color: #566dea;
+  margin: 1.4rem 0;
+}
+
+.contentBeta p{
+  font-size: 1.4rem;
+  font-weight: normal;
+  color: #000000;
+  text-align: center;
+  margin: 0.8rem 0;
+}
+.formGroup{
+  display: flex;
+  flex-direction: column;
+  gap: .8rem;
+  align-items: center;
+  justify-content: center;
+}
+.formGroup input{
+  border: 1px solid #6ca6fd;
+}
+
+.formGroup button {
+  outline: none;
+  border: none;
+  display: block;
+  text-align: center;
+  background-color: #566dea;
+  color: #fff !important;
+  padding: 1.4rem 0.8rem;
+  text-decoration: none !important;
+  border-radius: 10px;
+  text-decoration: none;
+  box-shadow: 3px 3px 4px #b5b5b5;
+  transition: all 0.3s ease;
+}
+
+.formGroup button:hover {
+  background-color: #263481;
+}
 
 .container header {
   width: 100%;
