--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -676,7 +676,7 @@
 }
 .formGroup label{  
   color: #566DEA;
-  opacity: 50%;
+  opacity: 1 !important;
   font-weight: 600;
   margin: 0.8rem 0;
 }
