--- a/web/src/styles/components/Button.module.css
+++ b/web/src/styles/components/Button.module.css
@@ -35,6 +35,28 @@
   background-color: transparent;
   color: #566DEA;
 }
+
+.buttonDisabled{  
+  width: fit-content;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+
+  cursor: no-drop;
+
+  padding: 0.8rem 1.4rem;
+  font-weight: 500;  
+  border: none;
+  margin: 0.4rem 0;
+  border-radius: 0.8rem;
+  background-color: #797a85;
+  color: #FFF;
+}
+
 .button,
 .buttonTransparent{
   transition: 0.3s;
