--- a/web/src/styles/components/BackButton.module.css
+++ b/web/src/styles/components/BackButton.module.css
@@ -2,19 +2,23 @@
   width: 100%;
   margin: 1.4rem;
 }
-@media (min-width: 360px) { 
+
+/* PC */
+@media (min-width: 720px) {
   .container{
-    max-width: 32rem;
+    max-width: 90rem;
   }
 }
-@media (min-width: 720px) {
+/* Tablet */
+@media (min-width: 320px) and (max-width: 720px) {
   .container{
     max-width: 70rem;
   }
 }
-@media (min-width: 1200px) {
+/* Celular */
+@media (max-width: 320px) {
   .container{
-    max-width: 90rem;
+    max-width: 32rem;
   }
 }
 
