--- a/web/src/styles/pages/tutor/PetHistory.module.css
+++ b/web/src/styles/pages/tutor/PetHistory.module.css
@@ -1,12 +1,250 @@
-@media (min-width: 360px) {   
-  .container{
+/* PC */
+@media (min-width: 720px) {
+  .container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f3f5ff;
+    background-image: url(../../../assets/background-brand.png);
+    background-repeat: no-repeat;
+    background-position: -25rem 40rem;
+  }
+
+  .content {
+    max-width: 90rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+    justify-content: center;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .petInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #566dea;
+  }
+
+  .headerImage {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    margin: 0 2.4rem 0 0;
+  }
+
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+  }
+
+  .headerTitle {
+    color: #566dea;
+    font-weight: 400;
+    font-size: 2.4rem;
+    margin: 2.4rem;
+  }
+
+  .petAge {
+    font-weight: 400;
+    font-size: 1.6rem;
+  }
+
+  .wContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1.8rem;
+    border-radius: 0.8rem;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    transition: 0.2s;
+  }
+
+  .wContainer:hover {
+    filter: brightness(0.9);
+  }
+
+  .wContainer:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .wContainer svg {
+    fill: #566dea;
+  }
+
+  .itemRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.8rem;
+    width: 100%;
+  }
+
+  .divider {
+    width: 100%;
+    height: 0.2rem;
+    background-color: #566dea;
+  }
+
+  .itemTitle {
+    color: #566dea;
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+
+  .itemDate {
+    color: #696969;
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+
+  .itemNotation {
+    color: #000;
+    font-weight: 400;
+    font-size: 1.4rem;
+    text-align: left;
+    margin: 1.4rem 0;
+  }
+}
+/* Tablet */
+@media (min-width: 320px) and (max-width: 720px) {
+  .container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem 4.4rem;
+    background-color: #f3f5ff;
+    background-image: url(../../../assets/background-brand.png);
+    background-repeat: no-repeat;
+    background-position: -25rem 60rem;
+  }
+
+  .content {
+    max-width: 70rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+    justify-content: center;
+  }
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .petInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #566dea;
+  }
+
+  .headerImage {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    margin: 0 2.4rem 0 0;
+  }
+
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+  }
+
+  .headerTitle {
+    color: #566dea;
+    font-weight: 400;
+    font-size: 2.4rem;
+    margin: 2.4rem;
+  }
+
+  .petAge {
+    font-weight: 400;
+    font-size: 1.6rem;
+  }
+
+  .wContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1.8rem;
+    border-radius: 0.8rem;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    transition: 0.2s;
+  }
+
+  .wContainer:hover {
+    filter: brightness(0.9);
+  }
+
+  .wContainer:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .wContainer svg {
+    fill: #566dea;
+  }
+
+  .itemRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.8rem;
+    width: 100%;
+  }
+
+  .divider {
+    width: 100%;
+    height: 0.2rem;
+    background-color: #566dea;
+  }
+
+  .itemTitle {
+    color: #566dea;
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+
+  .itemDate {
+    color: #696969;
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+
+  .itemNotation {
+    color: #000;
+    font-weight: 400;
+    font-size: 1.4rem;
+    text-align: left;
+    margin: 1.4rem 0;
+  }
+}
+/* Celular */
+@media (max-width: 320px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem 2.4rem;
-    background-color: #F3F5FF;
+    background-color: #f3f5ff;
     overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
@@ -14,45 +252,44 @@
     background-size: auto 45rem;
   }
 
-  .header{
+  .header {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  .petInfo{
+  .petInfo {
     display: flex;
     flex-direction: row;
     align-items: center;
     color: #566dea;
   }
 
-  .headerImage{
+  .headerImage {
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
     margin: 0 2.4rem 0 0;
   }
 
-  .petName{
+  .petName {
     font-weight: 600;
     font-size: 2.4rem;
   }
 
-  .headerTitle{
+  .headerTitle {
     color: #566dea;
     font-weight: 400;
     font-size: 2.4rem;
     margin: 2.4rem;
-
   }
 
-  .petAge{
+  .petAge {
     font-weight: 400;
     font-size: 1.6rem;
   }
-    
-  .content{
+
+  .content {
     padding: 2.4rem 0;
     max-width: 32rem;
     display: flex;
@@ -62,110 +299,61 @@
     justify-content: center;
   }
 
-  .wContainer{
+  .wContainer {
     display: flex;
     flex-direction: column;
     width: 100%;
     padding: 1.8rem;
     border-radius: 0.8rem;
-    background-color: #FFF;
+    background-color: #fff;
     border: none;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
     transition: 0.2s;
   }
 
-  .wContainer:hover{    
+  .wContainer:hover {
     filter: brightness(0.9);
   }
-  
-  .wContainer:active{    
-    box-shadow: inset 0px 0px 6px 0px rgba(0,0,0,0.75);
+
+  .wContainer:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
-  
-  .wContainer svg{
+
+  .wContainer svg {
     fill: #566dea;
   }
-  
-  .itemRow{
+
+  .itemRow {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 0.8rem;
     width: 100%;
   }
-  
-  .divider{
+
+  .divider {
     width: 100%;
     height: 0.2rem;
     background-color: #566dea;
   }
 
-  .itemTitle{
+  .itemTitle {
     color: #566dea;
     font-weight: 400;
     font-size: 1.4rem;
   }
 
-  .itemDate{
+  .itemDate {
     color: #696969;
     font-weight: 400;
     font-size: 1.4rem;
   }
-  
-  .itemNotation{
+
+  .itemNotation {
     color: #000;
     font-weight: 400;
     font-size: 1.4rem;
     text-align: left;
     margin: 1.4rem 0;
   }
-
- }
-
-@media (min-width: 720px) {     
-  .container{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 4rem 4.4rem;
-    background-color: #F3F5FF;
-    background-image: url(../../../assets/background-brand.png);
-    background-repeat: no-repeat;
-    background-position: -25rem 60rem;
-  }
-
-  .content{
-    max-width: 70rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 4rem;
-    justify-content: center;
-  }
- }
-
-@media (min-width: 1200px) {  
-  .container{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8rem 8.4rem;
-    background-color: #F3F5FF;
-    background-image: url(../../../assets/background-brand.png);
-    background-repeat: no-repeat;
-    background-position: -25rem 60rem;
-  }
-
-  .content{
-    max-width: 90rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 4rem;
-    justify-content: center;
-  }
- }
+}
