--- a/web/src/styles/pages/tutor/PetInfo.module.css
+++ b/web/src/styles/pages/tutor/PetInfo.module.css
@@ -1,69 +1,72 @@
-@media (min-width: 360px) {   
-  .container{
+/* PC */
+@media (min-width: 720px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 2.4rem;
-    background-color: #F3F5FF;
-    overflow: auto;
+    background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    background-size: auto 45rem;
   }
 
-  .header{
+  .content {
+    max-width: 90rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    align-items: center;
+  }
+
+  .header {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  .petInfo{
+  .petInfo {
     display: flex;
     flex-direction: row;
     align-items: center;
     color: #566dea;
   }
 
-  .petName{
+  .petName {
     font-size: 2.8rem;
     font-weight: 600;
   }
-    
-  .content{
-    padding: 2.4rem 0;
-    max-width: 32rem;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2.4rem;
-    justify-content: center;
-  }
 
-  .wContainer{
+  .wContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     padding: 1.8rem;
     border-radius: 0.8rem;
-    background-color: #FFF;
+    background-color: #fff;
     border: none;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
     transition: 0.2s;
   }
-  
-  .wContainer svg{
+
+  .wContainer svg {
     fill: #566dea;
   }
+  
+  
 
-  .uploadButton{
-    margin: 2.4rem;
-    width: 12.8rem;
-    height: 12.8rem;
+  .uploadButton svg{
+    width: 5rem;
+    height: auto;
+  }
+  
+  .uploadButton {
+    margin: 0.8rem;
+    width: 10rem;
+    height: 10rem;
 
     display: flex;
     align-items: center;
@@ -71,78 +74,212 @@
 
     border: none;
     border-radius: 50%;
-    background-color: #FFF;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
-
+    background-color: #fff;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
-  .uploadButton:hover{    
+  .uploadButton:hover {
     filter: brightness(0.9);
   }
-  
-  .uploadButton:active{    
-    box-shadow: inset 0px 0px 6px 0px rgba(0,0,0,0.75);
+
+  .uploadButton:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
 
- }
-
-@media (min-width: 720px) {     
-  .container{
+  .inputForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.4rem;
+  }
+}
+/* Tablet */
+@media (min-width: 320px) and (max-width: 720px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 4.4rem;
-    background-color: #F3F5FF;
+    background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -25rem 60rem;
+    background-position: -25rem 80rem;
   }
 
-  .content{
+  .content {
     max-width: 70rem;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    align-items: center;
+  }
+
+  .header {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    gap: 4rem;
-    justify-content: center;
+    align-items: center;
   }
- }
 
-@media (min-width: 1200px) {  
-  .container{
+  .petInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #566dea;
+  }
+
+  .petName {
+    font-size: 2.8rem;
+    font-weight: 600;
+  }
+
+  .wContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 1.8rem;
+    border-radius: 0.8rem;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    transition: 0.2s;
+  }
+
+  .wContainer svg {
+    fill: #566dea;
+  }
+
+  .uploadButton svg{
+    width: 5rem;
+    height: auto;
+  }
+  
+  .uploadButton {
+    margin: 0.8rem;
+    width: 10rem;
+    height: 10rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: none;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+  .uploadButton:hover {
+    filter: brightness(0.9);
+  }
+
+  .uploadButton:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .inputForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.4rem;
+  }
+}
+/* Celular */
+@media (max-width: 320px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8rem 8.4rem;
-    background-color: #F3F5FF;
+    background-color: #f3f5ff;
+    overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -25rem 60rem;
+    background-position: -25rem 80rem;
+    background-size: auto 45rem;
   }
 
-  .content{
-    max-width: 90rem;
-    width: 100%;
+  .content {
+    max-width: 32rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 4rem;
+    gap: 0.4rem;
     justify-content: center;
   }
- }
 
-.content h3{
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .petInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #566dea;
+  }
+
+  .petName {
+    font-size: 2.8rem;
+    font-weight: 600;
+  }
+
+  .wContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 1.8rem;
+    border-radius: 0.8rem;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    transition: 0.2s;
+  }
+
+  .wContainer svg {
+    fill: #566dea;
+  }
+
+  .uploadButton svg{
+    width: 4rem;
+    height: auto;
+  }
+
+  .uploadButton {
+    margin: 0.8rem;
+    width: 8rem;
+    height: 8rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: none;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+  .uploadButton:hover {
+    filter: brightness(0.9);
+  }
+
+  .uploadButton:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+}
+
+.content h3 {
   color: #566dea;
   font-weight: 600;
   margin: 0.8rem 0;
 }
 
-.content p{
-  color: #6CA6FD;
+.content p {
+  color: #6ca6fd;
   font-weight: 300;
   margin: 0 0 1.4rem 0;
 }
