--- a/web/src/styles/pages/tutor/PetProfile.module.css
+++ b/web/src/styles/pages/tutor/PetProfile.module.css
@@ -1,12 +1,13 @@
-@media (min-width: 360px) {   
-  .container{
+/* PC */
+@media (min-width: 720px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem 2.4rem;
-    background-color: #F3F5FF;
+    background-color: #f3f5ff;
     overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
@@ -14,147 +15,291 @@
     background-size: auto 45rem;
   }
 
-  .header{
+  .content {
+    max-width: 90rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2.4rem;
+    justify-content: center;
+    margin-top: 1.4rem;
+  }
+
+  .header {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  .petInfo{
+  .petInfo {
     display: flex;
     flex-direction: row;
     align-items: center;
     color: #566dea;
   }
 
-  .headerImage{
+  .headerImage {
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
     margin: 0 2.4rem 0 0;
   }
 
-  .petName{
+  .petName {
     font-weight: 600;
     font-size: 2.4rem;
   }
 
-  .petAge{
+  .petAge {
     font-weight: 400;
     font-size: 1.8rem;
   }
-    
-  .content{
-    padding: 2.4rem 0;
-    max-width: 32rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2.4rem;
-    justify-content: center;
-  }
 
-  .wContainer{
+  .wContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
     padding: 1.8rem;
     border-radius: 0.8rem;
-    background-color: #FFF;
+    background-color: #fff;
     border: none;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
     transition: 0.2s;
   }
 
-  .wContainer:hover{    
+  .wContainer:hover {
     filter: brightness(0.9);
   }
-  
-  .wContainer:active{    
-    box-shadow: inset 0px 0px 6px 0px rgba(0,0,0,0.75);
+
+  .wContainer:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
-  
-  .wContainer svg{
+
+  .wContainer svg {
     fill: #566dea;
   }
 
-  .title{
+  .title {
     font-weight: 600;
     font-size: 1.8rem;
     margin-left: 1.8rem;
     color: #566dea;
   }
 
-  .qrCode{
+  .qrCode {
     height: 6.4rem;
     width: auto;
-
   }
-  .codigoPet{    
+  .codigoPet {
     height: 2.4rem;
     width: auto;
     margin-left: 2.4rem;
   }
-
- }
-
-@media (min-width: 720px) {     
-  .container{
+}
+/* Tablet */
+@media (min-width: 320px) and (max-width: 720px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 4rem 4.4rem;
-    background-color: #F3F5FF;
+    background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -25rem 60rem;
+    background-position: -25rem 40rem;
   }
 
-  .content{
+  .content {
     max-width: 70rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 4rem;
     justify-content: center;
+    margin: 2.4rem 0;
   }
- }
 
-@media (min-width: 1200px) {  
-  .container{
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .petInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #566dea;
+  }
+
+  .headerImage {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    margin: 0 2.4rem 0 0;
+  }
+
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+  }
+
+  .petAge {
+    font-weight: 400;
+    font-size: 1.8rem;
+  }
+
+  .wContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    padding: 1.8rem;
+    border-radius: 0.8rem;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    transition: 0.2s;
+  }
+
+  .wContainer:hover {
+    filter: brightness(0.9);
+  }
+
+  .wContainer:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .wContainer svg {
+    fill: #566dea;
+  }
+
+  .title {
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin-left: 1.8rem;
+    color: #566dea;
+  }
+
+  .qrCode {
+    height: 6.4rem;
+    width: auto;
+  }
+  .codigoPet {
+    height: 2.4rem;
+    width: auto;
+    margin-left: 2.4rem;
+  }
+}
+/* Celular */
+@media (max-width: 320px) {
+  .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8rem 8.4rem;
-    background-color: #F3F5FF;
+    padding:  0.8rem 1.4rem;
+    background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -25rem 60rem;
+    background-position: -45rem 40rem;
   }
 
-  .content{
+  .content {
     max-width: 90rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 4rem;
+    gap: 1.2rem;
     justify-content: center;
+    margin: 2.4rem 0;
   }
- }
 
-.content h3{
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .petInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #566dea;
+  }
+
+  .headerImage {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    margin: 0 2.4rem 0 0;
+  }
+
+  .petName {
+    font-weight: 600;
+    font-size: 2.4rem;
+  }
+
+  .petAge {
+    font-weight: 400;
+    font-size: 1.8rem;
+  }
+
+  .wContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    padding: 1.8rem;
+    border-radius: 0.8rem;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    transition: 0.2s;
+  }
+
+  .wContainer:hover {
+    filter: brightness(0.9);
+  }
+
+  .wContainer:active {
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  .wContainer svg {
+    fill: #566dea;
+  }
+
+  .title {
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin-left: 1.8rem;
+    color: #566dea;
+  }
+
+  .qrCode {
+    height: 6.4rem;
+    width: auto;
+  }
+  .codigoPet {
+    height: 2.4rem;
+    width: auto;
+    margin-left: 2.4rem;
+  }
+}
+
+.content h3 {
   color: #566dea;
   font-weight: 600;
   margin: 0.8rem 0;
 }
 
-.content p{
-  color: #6CA6FD;
+.content p {
+  color: #6ca6fd;
   font-weight: 300;
   margin: 0 0 1.4rem 0;
 }
