ajustes no context

--- a/web/src/styles/pages/tutor/PetList.module.css
+++ b/web/src/styles/pages/tutor/PetList.module.css
@@ -15,6 +15,7 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
+    gap: 2.4rem;
   }
 
   .content {
@@ -77,6 +78,7 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
+    gap: 1.4rem;
   }
 
   .content {
@@ -141,6 +143,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     background-size: auto 45rem;
+    gap: 0.8rem;
   }
 
   .content {
