--- a/web/src/styles/pages/tutor/AddPetVaccineHistory.module.css
+++ b/web/src/styles/pages/tutor/AddPetVaccineHistory.module.css
@@ -75,6 +75,12 @@
     fill: #566dea;
   }
 
+  .uploadInput {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+  }
+
   .uploadButton svg {
     width: 5rem;
     height: auto;
@@ -185,6 +191,12 @@
 
   .wContainer svg {
     fill: #566dea;
+  }
+  
+  .uploadInput {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
   }
 
   .uploadButton svg {
@@ -299,6 +311,12 @@
 
   .wContainer svg {
     fill: #566dea;
+  }
+  
+  .uploadInput {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
   }
 
   .uploadButton svg {
