--- a/web/src/styles/pages/tutor/CreatePet.module.css
+++ b/web/src/styles/pages/tutor/CreatePet.module.css
@@ -55,19 +55,17 @@
   .wContainer svg {
     fill: #566dea;
   }
-  
-  
 
-  .uploadButton svg{
+  .uploadButton svg {
     width: 5rem;
     height: auto;
   }
-  
+
   .uploadButton {
     margin: 0.8rem;
     width: 10rem;
     height: 10rem;
-
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,6 +75,12 @@
     background-color: #fff;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
+  .uploadInput {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+  }
+
   .uploadButton:hover {
     filter: brightness(0.9);
   }
@@ -85,7 +89,7 @@
     box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
 
-  .inputForm{
+  .inputForm {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -149,12 +153,17 @@
   .wContainer svg {
     fill: #566dea;
   }
+  .uploadInput {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+  }
 
-  .uploadButton svg{
+  .uploadButton svg {
     width: 5rem;
     height: auto;
   }
-  
+
   .uploadButton {
     margin: 0.8rem;
     width: 10rem;
@@ -177,7 +186,7 @@
     box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
   }
 
-  .inputForm{
+  .inputForm {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -243,8 +252,13 @@
   .wContainer svg {
     fill: #566dea;
   }
+  .uploadInput {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+  }
 
-  .uploadButton svg{
+  .uploadButton svg {
     width: 4rem;
     height: auto;
   }
