--- a/web/src/styles/pages/tutor/PetHistory.module.css
+++ b/web/src/styles/pages/tutor/PetHistory.module.css
@@ -6,20 +6,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
+    overflow: auto;
   }
 
   .content {
     max-width: 90rem;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 4rem;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .noData {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto;
+  }
+  .noDataTitle {
+    text-align: center;
+    color: #566dea;
+    margin: 1.4rem 0;
+  }
+  .noDataImg {
+    height: 30rem;
+    width: auto;
+    margin: 1.4rem 0;
   }
 
   .header {
@@ -130,16 +146,34 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 60rem;
+    overflow: auto;
   }
 
   .content {
     max-width: 70rem;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 4rem;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
+
+  .noData {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto;
+  }
+  .noDataTitle {
+    text-align: center;
+    color: #566dea;
+    margin: 1.4rem 0;
+  }
+  .noDataImg {
+    height: 30rem;
+    width: auto;
+    margin: 1.4rem 0;
+  }
+
   .header {
     display: flex;
     flex-direction: row;
@@ -250,6 +284,32 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     background-size: auto 45rem;
+    overflow: auto;
+  }
+
+  .content {
+    max-width: 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .noData {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    height: auto;
+  }
+  .noDataTitle {
+    text-align: center;
+    color: #566dea;
+    margin: 1.4rem 0;
+  }
+  .noDataImg {
+    height: 28rem;
+    width: auto;
+    margin: 1.4rem 0;
   }
 
   .header {
