finalizado o controle de erros ao atualizar

--- a/web/src/styles/pages/admin/login-page.css
+++ b/web/src/styles/pages/admin/login-page.css
@@ -9,7 +9,7 @@
     overflow: hidden;
     background-size: cover;
     background-position: center;
-    background-image: url('../../../assets/admin/pet.jpg');
+    background-image: url('../../../assets/admin/pet_alt.jpg');
 }
 
 #login-page .login-form {
