--- a/web/src/styles/pages/tutor/AddPetVaccineHistory.module.css
+++ b/web/src/styles/pages/tutor/AddPetVaccineHistory.module.css
@@ -42,6 +42,7 @@
   }
 
   .petName {
+    color: #566dea;
     font-weight: 600;
     font-size: 2.4rem;
   }
@@ -160,6 +161,7 @@
   }
 
   .petName {
+    color: #566dea;
     font-weight: 600;
     font-size: 2.4rem;
   }
@@ -192,7 +194,7 @@
   .wContainer svg {
     fill: #566dea;
   }
-  
+
   .uploadInput {
     visibility: hidden;
     position: absolute;
@@ -280,6 +282,7 @@
   }
 
   .petName {
+    color: #566dea;
     font-weight: 600;
     font-size: 2.4rem;
   }
@@ -312,7 +315,7 @@
   .wContainer svg {
     fill: #566dea;
   }
-  
+
   .uploadInput {
     visibility: hidden;
     position: absolute;
