--- a/web/src/styles/pages/vet/VetProfile.module.css
+++ b/web/src/styles/pages/vet/VetProfile.module.css
@@ -27,6 +27,32 @@
 
   .header {
     display: flex;
+    width: 90rem;
+    padding: 0 2.4rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .avatarButton {
+    background-color: #6ca6fd;
+    border-radius: 50%;
+    width: 4.4rem;
+    height: 4.4rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    border: none;
+
+    overflow: hidden;
+    transition: 0.2s;
+  }
+
+  .headerTitlePage{
+    display: flex;
     flex-direction: row;
     align-items: center;
   }
