--- a/web/src/styles/components/HomeNavigation.module.css
+++ b/web/src/styles/components/HomeNavigation.module.css
@@ -1,5 +1,23 @@
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 2.4rem;
+  padding: 2.8rem 4.8rem;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 1.4rem;
+}
+
+.navImage {
+  width: 15rem;
+  height: auto;
+}
 /* PC */
 @media (min-width: 720px) {
+  
+
+
   .roundedButton,
   .menuItems,
   .navItemsTablet,
