add overflow auto tutor

--- a/web/src/styles/pages/tutor/TutorLocalizaPet.module.css
+++ b/web/src/styles/pages/tutor/TutorLocalizaPet.module.css
@@ -10,6 +10,7 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
+    overflow: auto;
   }
 
   .content {
@@ -79,6 +80,7 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
+    overflow: auto;
   }
 
   .content {
@@ -164,6 +166,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     background-size: auto 45rem;
+    overflow: auto;
   }
 
   .content {
