--- a/web/src/styles/pages/tutor/PetList.module.css
+++ b/web/src/styles/pages/tutor/PetList.module.css
@@ -12,6 +12,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     gap: 2.4rem;
+    overflow: auto;
   }
 
   .content {
@@ -92,6 +93,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     gap: 1.4rem;
+    overflow: auto;
   }
 
   .content {
@@ -174,6 +176,7 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     gap: 0.8rem;
+    overflow: auto;
   }
 
   .content {
