--- a/web/src/styles/pages/tutor/PetVaccineHistory.module.css
+++ b/web/src/styles/pages/tutor/PetVaccineHistory.module.css
@@ -10,6 +10,7 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
+    overflow: auto;
   }
 
   .content {
