--- a/web/src/styles/pages/tutor/AddPetHistory.module.css
+++ b/web/src/styles/pages/tutor/AddPetHistory.module.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -130,6 +131,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -250,6 +252,7 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
