--- a/web/src/styles/pages/tutor/PetCode.module.css
+++ b/web/src/styles/pages/tutor/PetCode.module.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -86,6 +87,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -163,6 +165,7 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
