--- a/web/src/styles/pages/tutor/PetList.module.css
+++ b/web/src/styles/pages/tutor/PetList.module.css
@@ -13,6 +13,7 @@
     background-position: -25rem 40rem;
     gap: 2.4rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -94,6 +95,7 @@
     background-position: -25rem 80rem;
     gap: 1.4rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -177,6 +179,7 @@
     background-size: auto 45rem;
     gap: 0.8rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
