--- a/web/src/styles/pages/tutor/PetProfile.module.css
+++ b/web/src/styles/pages/tutor/PetProfile.module.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -109,6 +110,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -208,6 +210,7 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
