--- a/web/src/styles/pages/tutor/TutorLocalizaPet.module.css
+++ b/web/src/styles/pages/tutor/TutorLocalizaPet.module.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -81,6 +82,7 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
@@ -167,6 +169,7 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     overflow: auto;
+    padding: 0 2.4rem;
   }
 
   .content {
