--- a/web/src/styles/pages/tutor/PetHistory.module.css
+++ b/web/src/styles/pages/tutor/PetHistory.module.css
@@ -10,7 +10,9 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -147,7 +149,9 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 60rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -285,7 +289,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     background-size: auto 45rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
