--- a/web/src/styles/pages/tutor/PetList.module.css
+++ b/web/src/styles/pages/tutor/PetList.module.css
@@ -12,7 +12,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     gap: 2.4rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -94,7 +96,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     gap: 1.4rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -178,7 +182,9 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     gap: 0.8rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
