--- a/web/src/styles/pages/tutor/PetProfile.module.css
+++ b/web/src/styles/pages/tutor/PetProfile.module.css
@@ -10,7 +10,9 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -109,7 +111,9 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -209,7 +213,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     background-size: auto 45rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
