--- a/web/src/styles/pages/tutor/PetVaccineHistory.module.css
+++ b/web/src/styles/pages/tutor/PetVaccineHistory.module.css
@@ -10,7 +10,9 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -150,7 +152,9 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 60rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -290,7 +294,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     background-size: auto 45rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
