--- a/web/src/styles/pages/tutor/TutorProfile.module.css
+++ b/web/src/styles/pages/tutor/TutorProfile.module.css
@@ -11,7 +11,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
     padding-bottom: 2.4rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -112,7 +114,9 @@
     background-repeat: no-repeat;
     background-position: -25rem 80rem;
     padding-bottom: 1.4rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
@@ -215,7 +219,9 @@
     background-position: -25rem 80rem;
     background-size: auto 45rem;
     padding-bottom: 0.8rem;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 2.4rem;
   }
 
