adicionando view do input upload

--- a/web/src/styles/components/InputUpload.module.css
+++ b/web/src/styles/components/InputUpload.module.css
@@ -81,6 +81,12 @@
     color: #566dea;
     fill: #566dea;
   }
+  
+  .imagePreviewContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 
   .imageList {
     width: 100%;
